# midiBox

./: README.md  pyproject.toml
midibox/: __init__.py  main.ipynb  preparation.ipynb  record.py
