[tool.poetry]
name = "midibox"
version = "0.1.0"
description = ""
authors = ["pardunmeplz <dundh.parth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
librosa = "^0.9.2"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
